--- a/tests/index.html
+++ b/tests/index.html
@@ -9,6 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="qunit-1.12.0.js"></script>
+  <script src="../domdiff.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
