--- a/simpleTest.html
+++ b/simpleTest.html
@@ -17,28 +17,6 @@
       Test elements for diffing
     -->
 
-<!--
-    <div id="t1">
-        <p>test</p>
-        <p class="p" style="width:100%;">test2</p>
-        <div>
-          <ol>
-            <li>test</li>
-          </ol>
-        </div>
-    </div>
-
-    <div id="t2">
-        <p>test</p>
-        <p class="p" data-title="test two">test2</p>
-        <div>
-          <ol>wefewfwef
-            <li>test</li>
-          </ol>
-        </div>
-    </div>
--->
-
     <div id="t1">
         <p>test</p>
         <p class="p" style="width:100%;">test2</p>
@@ -54,7 +32,8 @@
         <p class="p" data-title="test two">test2</p>
         <div>
           <ol>
-            <li>test 1</li>
+            <li>test</li>
+            <li>XYZ</li>
           </ol>
         </div>
     </div>
@@ -65,25 +44,19 @@
       Test this library
     -->
     <script>
-      require(["DOMdiff", "markSubTrees"], function(DOMdiff, markSubTrees) {
-        // test tree 1 ("old")
-        var t1 = document.getElementById("t1");//.childNodes[5];//.childNodes[1];
-
-        // test tree 2 ("new")
-        var t2 = document.getElementById("t2");//.childNodes[5];//.childNodes[1];
-
+      require(["DOMdiff", "markSubTrees", "applyDiff"], function(DOMdiff, markSubTrees, applyDiff) {
+        var t1 = document.getElementById("t1");
+        var t2 = document.getElementById("t2");
         var subtrees = markSubTrees(t1, t2);
-/*
-        document.getElementById("result").innerHTML = "<h2>unchanged subtrees at top level:</h2>";
-        subtrees.forEach(function(subtree) {
-          document.getElementById("result").innerHTML += subtree.toString() + "<br>";
-        });
-*/
-        console.log(subtrees);
 
         DOMdiff.findDiff(t1,t2)
-        console.log(DOMdiff.diffTracker);
+        var diffs = DOMdiff.diffTracker.diffInformation;
+        console.log(diffs);
 
+        var t3 = t1.cloneNode(true);
+        applyDiff(diffs, t3);
+        document.body.appendChild(t3);
+        console.log({t3 : t3});
       });
     </script>
   </body>
