--- a/simpleTest.html
+++ b/simpleTest.html
@@ -18,24 +18,15 @@
     -->
 
     <div id="t1">
-        <p>test</p>
-        <p class="p" style="width:100%;">test2</p>
-        <div>
-          <ol>
-            <li>test</li>
-          </ol>
-        </div>
+        <div data-non-negative=true class="stylish">a</div>
+        <div>b</div>
+        <hr>
     </div>
 
     <div id="t2">
-        <p>test</p>
-        <p class="p" data-title="test two">test2</p>
-        <div>
-          <ol>
-            <li>test</li>
-            <li>XYZ</li>
-          </ol>
-        </div>
+        <hr>
+        <div class="stylish" title="testing 1, 2, 3">a</div>
+        <div>b</div>
     </div>
 
     <div id="result"></div>
@@ -44,7 +35,7 @@
       Test this library
     -->
     <script>
-      require(["DOMdiff", "markSubTrees", "applyDiff"], function(DOMdiff, markSubTrees, applyDiff) {
+      require(["DOMdiff", "markSubTrees", "applyDiff"], function(DOMdiff, markSubTrees, applicator) {
         var t1 = document.getElementById("t1");
         var t2 = document.getElementById("t2");
         var subtrees = markSubTrees(t1, t2);
@@ -54,9 +45,9 @@
         console.log(diffs);
 
         var t3 = t1.cloneNode(true);
-        applyDiff(diffs, t3);
+        applicator.applyDiff(diffs, t3);
         document.body.appendChild(t3);
-        console.log({t3 : t3});
+        console.log(t3);
       });
     </script>
   </body>
