Added qUnit test cases for findAttrDiff

--- a/tests/index.html
+++ b/tests/index.html
@@ -20,7 +20,9 @@
       // extension so RequireJS resolves them as relative paths rather than using
       // the `baseUrl` value supplied above.
       var testModules = [
-        "tests.js",
+        "roughlyEqualsTests.js",
+        "markSubTreesTests.js",
+        "findAttrDiffTests.js"
       ];
 
       // Resolve all testModules and then start the Test Runner.
