--- a/simpleTest.html
+++ b/simpleTest.html
@@ -18,15 +18,14 @@
     -->
 
     <div id="t1">
-        <div data-non-negative=true class="stylish">a</div>
-        <div>b</div>
-        <hr>
+        <h2>What is dom-diff</h2>
+        <p>This is a thing</p>
+        <p>This is also athing</p>
     </div>
 
     <div id="t2">
-        <hr>
-        <div class="stylish" title="testing 1, 2, 3">a</div>
-        <div>b</div>
+      <h2>how to use dom-diff</h2>
+      <p><code>//some code here</code></p>
     </div>
 
     <div id="result"></div>
@@ -36,8 +35,10 @@
     -->
     <script>
       require(["DOMdiff", "markSubTrees", "applyDiff"], function(DOMdiff, markSubTrees, applicator) {
-        var t1 = document.getElementById("t1");
-        var t2 = document.getElementById("t2");
+        /*
+        var t1 = document.getElementById("a1");
+        var t2 = document.getElementById("a2");
+
         var subtrees = markSubTrees(t1, t2);
 
         DOMdiff.findDiff(t1,t2)
@@ -48,6 +49,22 @@
         applicator.applyDiff(diffs, t3);
         document.body.appendChild(t3);
         console.log(t3);
+        */
+
+        var a = document.createElement('div');
+        a.innerHTML='hello<span>hull<i>a</i></span>';
+
+        var b = document.createElement('div');
+        b.innerHTML='hello<span>tull<i>a</i></span>';
+
+        var subtrees = markSubTrees(a,b);
+        DOMdiff.findDiff(a,b);
+        var diffs = DOMdiff.diffTracker.diffInformation;
+        console.log(diffs);
+
+        applicator.applyDiff(diffs, b);
+        console.log(b);
+
       });
     </script>
   </body>
