Split up the test cases into separate files
Added the roughlyEqual test cases as well

--- a/tests/index.html
+++ b/tests/index.html
@@ -20,7 +20,8 @@
       // extension so RequireJS resolves them as relative paths rather than using
       // the `baseUrl` value supplied above.
       var testModules = [
-        "tests.js",
+        "roughlyEqualsTests.js",
+        "markSubTreesTests.js",
       ];
 
       // Resolve all testModules and then start the Test Runner.
